--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a id="forkme_banner" href="https://github.com/thyphenj/thyphenj.github.io">View on GitHub</a>
 
           <h1 id="project_title">thyphenj</h1>
-          <h2 id="project_tagline">terence-john witha mangled hyphen</h2>
+          <h2 id="project_tagline">terence-john initially with a literal hyphen</h2>
 
           
         </header>
